# service-catalog

./: .gitignore  ARCHITECTURE.md  COMPETITIVE-ANALYSIS.md  PLAN.md  PRODUCT-SPEC.md  README.md
.github/workflows/: validate.yml
aws/mongodb/: README.md  main.tf  outputs.tf  providers.tf  qsm.yml  terraform.tfvars.example  variables.tf
aws/mysql/: README.md  main.tf  outputs.tf  providers.tf  qsm.yml  terraform.tfvars.example  variables.tf
aws/postgresql/: README.md  main.tf  outputs.tf  providers.tf  qsm.yml  variables.tf
aws/redis/: README.md  main.tf  outputs.tf  providers.tf  qsm.yml  terraform.tfvars.example  variables.tf
diagrams/: architecture.excalidraw  user-journey.excalidraw  user_journey.excalidraw  workflows.md
docs/: 1-workflows.md  2-changes.md  3-envblueprint-spec.md
dto/: CatalogApi.kt
examples/aws-s3/: qsm.yml
examples/helm-redis/: qsm.yml  values.yaml
postgresql/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
runner/: Cargo.toml  Dockerfile  build.rs  input.json
runner/proto/: runner.proto
runner/src/: main.rs
schemas/: qsm-schema.json
v2/: DESIGN.md  FUTURE.md  OPERATIONS.md
v2/examples/aws-s3/: qsm.yml  variables.tf
v2/examples/helm-prometheus/: main.tf  outputs.tf  providers.tf  qsm.yml  variables.tf
v2/examples/managed-postgresql/: main.tf  outputs.tf  providers.tf  qsm.yml  variables.tf
v2/examples/web-app-with-database/: qsm.yml
