[package]
name = "tf-runner"
version = "0.1.0"
edition = "2021"
description = "Terraform runner gRPC service for Qovery Service Catalog"

[[bin]]
name = "tf-runner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
